--- a/package.json
+++ b/package.json
@@ -214,6 +214,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
+    "@azure/ai-projects": "^1.0.0-beta.10",
     "@googleapis/sheets": "^9.8.0",
     "@inquirer/checkbox": "^4.2.4",
     "@inquirer/confirm": "^5.1.18",
