Revert "ci: temporarily disable redteam multi-lingual strategy in integration…"
This reverts commit 38284b2659254963391c231ce29e73f1c71cbc1b.

--- a/test/redteam/integration/promptfooconfig.yaml
+++ b/test/redteam/integration/promptfooconfig.yaml
@@ -32,10 +32,7 @@ redteam:
     - id: jailbreak:composite # Finds novel jailbreak prompts by chaining together individual techniques
       config:
         numTests: 1
-
-    # FIXME(mldangelo) temporarily disabled on 2025-09-18 due to intermittent generation failures
-    # It normally adds ~12 test cases but is currently failing in CI
-    # - id: multilingual
-    #   config:
-    #     languages:
-    #       - es-ES
+    - id: multilingual
+      config:
+        languages:
+          - es-ES
