update to use the new monkey patch

--- a/src/app/tsconfig.app.json
+++ b/src/app/tsconfig.app.json
@@ -23,5 +23,5 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src"]
+  "include": ["./src", "./src/types/globals.d.ts"]
 }
