--- a/site/package.json
+++ b/site/package.json
@@ -60,6 +60,8 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@mui/material": "^7.3.2",
+    "@mui/system": "^7.3.2",
     "swiper": "^11.2.10"
   }
 }
