--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -236,6 +236,8 @@ jobs:
 
       - name: Build Documentation
         working-directory: site
+        env:
+          SKIP_OG_GENERATION: true
         run: npm run build
 
   webui:
