ci: ensure platform-specific resvg binary is available for Build Docs
Add explicit installation of @resvg/resvg-js-linux-x64-gnu to ensure
the platform-specific binary is available on Linux CI runners.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -230,7 +230,10 @@ jobs:
 
       - name: Install Dependencies
         working-directory: site
-        run: npm install
+        run: |
+          npm install
+          # Ensure platform-specific @resvg binaries are available
+          npm install @resvg/resvg-js-linux-x64-gnu --save-optional || true
 
       - name: Type Check
         working-directory: site
