Add comprehensive network isolation for tests
- Enhanced jest.setup.ts with network call monitoring and blocking
- Added custom Jest environment for maximum isolation
- Created network isolation validator script
- Added npm scripts for network-isolated testing
- Fixed test files to work with network isolation

Features:
- Blocks all external network calls during tests
- Allows localhost/127.0.0.1 for test servers
- Detailed reporting of blocked network attempts
- Validates tests don't reach external networks

--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "test:integration": "jest --config jest.integration.config.ts integration",
     "test:watch": "jest --watch",
     "test:redteam:integration": "npm run build && ./test/redteam/integration/test.sh",
+    "test:network-isolated": "JEST_ENVIRONMENT=./jest-network-isolated.environment.js jest --verbose",
+    "test:validate-network-isolation": "node scripts/validate-network-isolation.js",
     "test": "jest",
     "tsc": "tsc",
     "mcp": "node dist/src/main.js mcp",
