docs: add comprehensive TTFT documentation and update examples
Add Time to First Token (TTFT) measurement documentation across all relevant locations:

- Update HTTP provider streaming example with TTFT configuration
- Add TTFT assertion to main assertions documentation table
- Create detailed TTFT section in deterministic assertions guide
- Update HTTP provider docs with enableStreamingMetrics config
- Modernize streaming guidance from "not recommended" to highlighting TTFT benefits
- Document caching behavior and performance trade-offs
- Add practical examples with OpenAI chat completions API

The documentation now properly reflects that streaming provides valuable
performance measurement capabilities through TTFT metrics.

--- a/examples/http-provider-streaming/promptfooconfig.yaml
+++ b/examples/http-provider-streaming/promptfooconfig.yaml
@@ -1,62 +1,76 @@
 # yaml-language-server: $schema=https://promptfoo.dev/config-schema.json
-description: OpenAI HTTP provider streaming example
+description: HTTP provider streaming with TTFT measurement
 
-# This example shows how to use OpenAI's streaming API via HTTP provider, but this
-# approach is NOT RECOMMENDED. Promptfoo tool waits for the
-# entire response to complete anyway, so you get no streaming benefits.
+# This example demonstrates streaming response handling with Time to First Token (TTFT) measurement.
+# While promptfoo waits for complete responses, streaming enables important performance metrics:
 #
-# 🎯 RECOMMENDED: Use the built-in OpenAI provider instead: openai:responses:gpt-5-mini
-# - Simpler configuration
-# - Automatic environment variable handling
-# - Better error handling
-# - Optimized performance
+# ✅ TTFT Measurement: Track how quickly models start responding
+# ✅ User-Perceived Performance: Measure streaming responsiveness
+# ✅ Model Comparison: Compare streaming performance across providers
+#
+# 💡 Alternative: Use built-in providers when available (openai:chat:gpt-4o-mini)
+# However, HTTP provider with streaming is valuable for:
+# - Custom endpoints that support streaming
+# - TTFT performance measurement
+# - APIs not yet supported by built-in providers
 
 prompts:
   - 'Write a haiku about {{topic}}'
   - 'Explain {{topic}} in one sentence'
 
 providers:
-  - id: https://api.openai.com/v1/responses
+  - id: https://api.openai.com/v1/chat/completions
     config:
+      enableStreamingMetrics: true # Enable TTFT measurement
       method: 'POST'
       headers:
         'Content-Type': 'application/json'
         'Authorization': 'Bearer {{env.OPENAI_API_KEY}}'
       body:
-        model: 'gpt-5-nano'
-        input:
+        model: 'gpt-4o-mini'
+        messages:
           - role: 'user'
             content: '{{prompt}}'
-        stream: true # Demonstrates streaming (no eval benefit)
+        stream: true # Enable streaming for TTFT measurement
       transformResponse: |
         (json, text) => {
-          // If non-streaming JSON with output_text/response arrives, return it
-          if (json && (json.output_text || json.response)) {
-            return json.output_text || json.response;
+          // Handle non-streaming JSON response
+          if (json && json.choices?.[0]?.message?.content) {
+            return json.choices[0].message.content;
           }
-          // Otherwise parse SSE text and accumulate delta chunks
-          let out = '';
+
+          // Parse OpenAI streaming SSE format
+          let content = '';
           for (const line of String(text || '').split('\n')) {
             const trimmed = line.trim();
             if (!trimmed.startsWith('data: ')) continue;
+            if (trimmed === 'data: [DONE]') break;
+
             try {
-              const evt = JSON.parse(trimmed.slice(6));
-              if (evt && evt.type === 'response.output_text.delta' && typeof evt.delta === 'string') {
-                out += evt.delta;
+              const data = JSON.parse(trimmed.slice(6));
+              if (data.choices?.[0]?.delta?.content) {
+                content += data.choices[0].delta.content;
               }
-            } catch {}
+            } catch {
+              // Skip malformed JSON
+            }
           }
-          return out.trim();
+          return content.trim();
         }
 
 defaultTest:
   assert:
-    # Ensure we get some content
+    # Ensure we get meaningful content
     - type: javascript
-      value: 'output && output.length > 0'
-    # Verify it's a string
-    - type: javascript
-      value: 'typeof output === "string"'
+      value: 'output && output.length > 10'
+
+    # TTFT should be reasonable (under 3 seconds for demo)
+    - type: ttft
+      threshold: 3000
+
+    # Total latency should be reasonable
+    - type: latency
+      threshold: 10000
 
 tests:
   - vars:
