feat: add auto-detection for streaming metrics and update to GPT-5 models
## Auto-Detection Enhancement
- Add shouldEnableStreamingMetrics() method to automatically detect when TTFT measurement is needed
- Auto-enable when body.stream === true (respects explicit enableStreamingMetrics setting)
- Improves user experience by eliminating manual configuration requirement
- Maintains backward compatibility with explicit enableStreamingMetrics setting

## Model Updates for September 2025
- Update all examples from GPT-4o/4o-mini to GPT-5/5-mini/5-nano
- Update documentation examples to use current model names
- Adjust TTFT performance expectations for GPT-5 series (100-600ms)
- Ensure examples work with latest OpenAI model releases

## Implementation Details
- bodyConfiguresStreaming() detects stream: true in request body
- hasStreamingAssertions() prepared for future TTFT assertion detection
- Maintains explicit opt-in behavior when enableStreamingMetrics is set
- Auto-detection only activates when enableStreamingMetrics is undefined

--- a/examples/http-provider-streaming/promptfooconfig.yaml
+++ b/examples/http-provider-streaming/promptfooconfig.yaml
@@ -27,7 +27,7 @@ providers:
         'Content-Type': 'application/json'
         'Authorization': 'Bearer {{env.OPENAI_API_KEY}}'
       body:
-        model: 'gpt-4o-mini'
+        model: 'gpt-5-mini'
         messages:
           - role: 'user'
             content: '{{prompt}}'
