feat: simplify TTFT auto-detection and finalize implementation
- Simplify auto-detection to check only body.stream === true
- Remove complex enableStreamingMetrics logic
- Update documentation to reflect simplified behavior
- Move test files to appropriate directories
- Update examples to use working OpenAI models
- Clean up root directory by moving YAML files

--- a/examples/ttft-measurement/promptfooconfig.yaml
+++ b/examples/ttft-measurement/promptfooconfig.yaml
@@ -1,34 +1,34 @@
 # Time to First Token (TTFT) measurement example
-# This example demonstrates how to measure TTFT using the HTTP provider with OpenAI's Realtime API
+# This example demonstrates how to measure TTFT using the HTTP provider with OpenAI's Chat Completions API
 
-description: TTFT measurement with gpt-5-nano streaming
+description: TTFT measurement with gpt-4o-mini streaming
 
 prompts:
   - 'Write a short story about {{topic}}'
   - 'Explain {{topic}} in detail with examples'
 
 providers:
-  - id: https://api.openai.com/v1/completions
+  - id: https://api.openai.com/v1/chat/completions
     config:
-      enableStreamingMetrics: true # Enable TTFT measurement
       method: 'POST'
       headers:
         'Content-Type': 'application/json'
         'Authorization': 'Bearer {{env.OPENAI_API_KEY}}'
       body:
-        model: 'gpt-5-nano'
-        prompt: '{{prompt}}'
-        stream: true # Enable streaming
+        model: 'gpt-4o-mini'
+        messages:
+          - role: 'user'
+            content: '{{prompt}}'
+        stream: true # Enable streaming for TTFT measurement
         max_tokens: 150
       transformResponse: |
         (json, text) => {
-          // Handle streaming SSE response format for completions API
-          if (json && json.choices?.[0]?.text) {
-            // Non-streaming response
-            return json.choices[0].text;
+          // Handle non-streaming JSON response
+          if (json && json.choices?.[0]?.message?.content) {
+            return json.choices[0].message.content;
           }
 
-          // Parse Server-Sent Events format
+          // Parse OpenAI streaming SSE format
           let content = '';
           for (const line of String(text || '').split('\n')) {
             const trimmed = line.trim();
@@ -37,8 +37,8 @@ providers:
 
             try {
               const data = JSON.parse(trimmed.slice(6));
-              if (data.choices?.[0]?.text) {
-                content += data.choices[0].text;
+              if (data.choices?.[0]?.delta?.content) {
+                content += data.choices[0].delta.content;
               }
             } catch (e) {
               // Skip malformed JSON
