feat: remove enableStreamingMetrics config option
Simplify TTFT measurement by relying solely on stream: true detection:
- Remove enableStreamingMetrics from HTTP provider schema
- Update logic to only check body.stream === true
- Update all documentation and examples to use stream: true
- Update error messages to reference stream configuration
- Simplify API by removing redundant configuration option
- Maintain backward compatibility through auto-detection

This change makes the API more intuitive - users just need to set
stream: true in their request body to enable TTFT measurement.

--- a/test/test-ttft-fix.yaml
+++ b/test/test-ttft-fix.yaml
@@ -1,4 +1,4 @@
-description: Test TTFT fix with reliable endpoints
+description: Test HTTP provider with reliable endpoints
 
 prompts:
   - 'Test prompt: {{topic}}'
@@ -8,7 +8,6 @@ providers:
   - id: https://httpbin.org/post
     label: 'POST test'
     config:
-      enableStreamingMetrics: true
       method: 'POST'
       headers:
         'Content-Type': 'application/json'
@@ -24,7 +23,6 @@ providers:
   - id: https://httpbin.org/json
     label: 'JSON test'
     config:
-      enableStreamingMetrics: true
       method: 'GET'
       transformResponse: |
         (json, text) => {
@@ -36,10 +34,6 @@ defaultTest:
     # Test that we get meaningful content
     - type: javascript
       value: 'output && output.length > 10'
-
-    # TTFT should be captured (generous threshold)
-    - type: ttft
-      threshold: 10000
 
     # Total latency should be reasonable
     - type: latency
