--- a/package.json
+++ b/package.json
@@ -105,12 +105,16 @@
     "@fal-ai/client": "^1.6.2",
     "@ibm-cloud/watsonx-ai": "^1.6.12",
     "@ibm-generative-ai/node-sdk": "^3.2.4",
+    "@livekit/agents": "^1.0.5",
+    "@livekit/rtc-node": "^0.13.18",
     "@playwright/browser-chromium": "^1.55.0",
     "@smithy/node-http-handler": "^4.1.1",
     "fluent-ffmpeg": "^2.1.3",
     "google-auth-library": "^10.3.0",
     "ibm-cloud-sdk-core": "^5.4.2",
     "langfuse": "^3.38.5",
+    "livekit-client": "^2.15.7",
+    "livekit-server-sdk": "^2.13.3",
     "natural": "^8.1.0",
     "node-sql-parser": "^5.3.12",
     "pdf-parse": "^1.1.1",
