--- a/package.json
+++ b/package.json
@@ -235,6 +235,7 @@
     "commander": "^14.0.1",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "csv-parse": "^6.1.0",
     "csv-stringify": "^6.6.0",
     "debounce": "^2.2.0",
