--- a/site/package.json
+++ b/site/package.json
@@ -25,7 +25,7 @@
     "@docusaurus/theme-mermaid": "^3.8.1",
     "@mdx-js/react": "^3.1.1",
     "@monaco-editor/react": "^4.7.0",
-    "@mui/icons-material": "^6.5.0",
+    "@mui/icons-material": "^7.3.2",
     "@resvg/resvg-js": "^2.6.2",
     "@segment/ajv-human-errors": "^2.15.0",
     "@swc/core": "^1.13.5",
@@ -60,6 +60,8 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@mui/material": "^7.3.2",
+    "@mui/system": "^7.3.2",
     "swiper": "^11.2.10"
   }
 }
