--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -236,7 +236,7 @@ jobs:
 
       - name: Build Documentation
         working-directory: site
-        run: npm run build
+        run: SKIP_OG_GENERATION=true npm run build
 
   webui:
     name: webui tests
