--- a/package.json
+++ b/package.json
@@ -195,8 +195,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "undici-types": "^7.16.0",
-    "winston-transport": "^4.9.0",
-    "zod-to-json-schema": "^3.24.6"
+    "winston-transport": "^4.9.0"
   },
   "optionalDependencies": {
     "@biomejs/cli-darwin-arm64": "2.2.4",
@@ -212,7 +211,7 @@
     "@swc/core-win32-x64-msvc": "^1.13.5"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.62.0",
+    "@anthropic-ai/sdk": "^0.63.0",
     "@apidevtools/json-schema-ref-parser": "^12.0.2",
     "@googleapis/sheets": "^9.8.0",
     "@inquirer/checkbox": "^4.2.4",
@@ -272,8 +271,8 @@
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "ws": "^8.18.3",
-    "zod": "^3.25.76",
-    "zod-validation-error": "^3.5.3"
+    "zod": "^4.1.11",
+    "zod-validation-error": "^4.0.2"
   },
   "madge": {
     "detectiveOptions": {
