fix: finalize Nscale provider with verified working implementation
- Fix image generation default response format to b64_json for Nscale compatibility
- Update all model names to use correct API formats:
  * Text models: lowercase format (e.g., openai/gpt-oss-20b)
  * Image models: proper case format (e.g., ByteDance/SDXL-Lightning-4step)
  * Embedding models: proper case format (e.g., Qwen/Qwen3-Embedding-8B)
- Remove incorrect "development status" notes from documentation
- Verify all three model types (chat, image, embedding) work correctly
- Update example configurations with working model names

All Nscale functionality now tested and confirmed working:
✅ Chat models: Full functionality with proper responses
✅ Image generation: Working with base64 JSON response format
✅ Embeddings: Working for similarity assertions

--- a/examples/nscale/image-promptfooconfig.yaml
+++ b/examples/nscale/image-promptfooconfig.yaml
@@ -1,15 +1,15 @@
 description: 'Nscale Image Generation Example - comparing different image models'
 
 providers:
-  - id: nscale:image:flux/flux.1-schnell
+  - id: nscale:image:BlackForestLabs/FLUX.1-schnell
     config:
       size: '1024x1024'
       n: 1
-  - id: nscale:image:bytedance/sdxl-lightning-4step
+  - id: nscale:image:ByteDance/SDXL-Lightning-4step
     config:
       size: '1024x1024'
       n: 1
-  - id: nscale:image:stable-diffusion/xl-1.0
+  - id: nscale:image:stabilityai/stable-diffusion-xl-base-1.0
     config:
       size: '1024x1024'
       n: 1
