fix: add npm overrides to resolve Zod v3/v4 dependency conflicts
Add npm overrides to force all packages to use Zod v4.1.11, resolving
peer dependency conflicts with packages that expect Zod v3.x

--- a/package.json
+++ b/package.json
@@ -284,6 +284,9 @@
       }
     }
   },
+  "overrides": {
+    "zod": "^4.1.11"
+  },
   "pnpm": {
     "onlyBuiltDependencies": [
       "@playwright/browser-chromium",
