--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@azure/openai-assistants": "^1.0.0-beta.6",
     "@biomejs/biome": "2.2.4",
     "@fal-ai/client": "^1.6.2",
+    "google-auth-library": "^10.3.0",
     "@ibm-cloud/watsonx-ai": "^1.6.13",
     "@ibm-generative-ai/node-sdk": "^3.2.4",
     "@jest/globals": "^30.1.2",
