--- a/examples/amazon-bedrock/promptfooconfig.qwen.yaml
+++ b/examples/amazon-bedrock/promptfooconfig.qwen.yaml
@@ -15,6 +15,14 @@ providers:
       top_p: 0.9
       showThinking: true # Set to false to hide thinking content
 
+  # Claude for comparison
+  - id: bedrock:us.anthropic.claude-3-5-sonnet-20241022-v2:0
+    label: Claude 3.5 Sonnet
+    config:
+      region: us-west-2
+      max_tokens: 2048
+      temperature: 0.7
+
   # Qwen3 Coder 30B - Smaller MoE model for efficient coding tasks
   - id: bedrock:qwen.qwen3-coder-30b-a3b-v1:0
     label: Qwen3 Coder 30B
@@ -101,3 +109,14 @@ tests:
         value: 'FastAPI'
       - type: contains
         value: 'authentication'
+
+  # Test tool calling specifically with the tools provider
+  - vars:
+      question: Calculate the result of 15 * 8 + 42
+    assert:
+      - type: contains
+        value: 'Called function calculate'
+      - type: contains
+        value: '15 * 8 + 42'
+    options:
+      provider: bedrock:qwen.qwen3-coder-480b-a35b-v1:0:Qwen3 Coder 480B with Tools
