--- a/examples/cometapi/promptfooconfig.yaml
+++ b/examples/cometapi/promptfooconfig.yaml
@@ -1,15 +1,17 @@
 # yaml-language-server: $schema=https://promptfoo.dev/config-schema.json
 
-description: Quick demo of the CometAPI provider answering a geography question
+description: Quick demo of the CometAPI provider answering geography questions
 
 prompts:
-  - What is the capital of France?
+  - What is the capital of {{country}}?
 
 providers:
   - cometapi:chat:gpt-5-mini
 
 tests:
   - vars:
-      calculation: 25 * 4 + 10
+      country: France
   - vars:
-      calculation: (8 + 2) * 5
+      country: Germany
+  - vars:
+      country: Italy
