--- a/examples/google-aistudio-gemini/promptfooconfig.yaml
+++ b/examples/google-aistudio-gemini/promptfooconfig.yaml
@@ -7,6 +7,22 @@ prompts:
     Please solve this step by step, showing your reasoning process.
 
 providers:
+  - id: google:gemini-2.5-flash-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0.7
+        maxOutputTokens: 2048
+        thinkingConfig:
+          thinkingBudget: 1024 # Enhanced reasoning and thinking capabilities
+
+  - id: google:gemini-2.5-flash-lite-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0.7
+        maxOutputTokens: 2048
+        thinkingConfig:
+          thinkingBudget: 1024 # Enhanced reasoning and thinking capabilities
+
   - id: google:gemini-2.5-pro
     config:
       generationConfig:
