--- a/examples/google-vertex/promptfooconfig.gemini.yaml
+++ b/examples/google-vertex/promptfooconfig.gemini.yaml
@@ -113,6 +113,72 @@ providers:
                     enum: ['restaurant', 'hotel', 'attraction']
                 required: ['query']
 
+  - id: vertex:gemini-2.5-flash-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0.7
+        maxOutputTokens: 2048
+      toolConfig:
+        functionCallingConfig:
+          mode: 'AUTO'
+      tools:
+        - functionDeclarations:
+            - name: 'get_weather'
+              description: 'Get weather information for a location'
+              parameters:
+                type: 'OBJECT'
+                properties:
+                  location:
+                    type: 'STRING'
+                    description: 'City name'
+                required: ['location']
+            - name: 'search_places'
+              description: 'Search for places of interest'
+              parameters:
+                type: 'OBJECT'
+                properties:
+                  query:
+                    type: 'STRING'
+                    description: 'Search query'
+                  type:
+                    type: 'STRING'
+                    description: 'Type of place'
+                    enum: ['restaurant', 'hotel', 'attraction']
+                required: ['query']
+
+  - id: vertex:gemini-2.5-flash-lite-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0
+        maxOutputTokens: 1024
+      toolConfig:
+        functionCallingConfig:
+          mode: 'AUTO'
+      tools:
+        - functionDeclarations:
+            - name: 'get_weather'
+              description: 'Get weather information for a location'
+              parameters:
+                type: 'OBJECT'
+                properties:
+                  location:
+                    type: 'STRING'
+                    description: 'City name'
+                required: ['location']
+            - name: 'search_places'
+              description: 'Search for places of interest'
+              parameters:
+                type: 'OBJECT'
+                properties:
+                  query:
+                    type: 'STRING'
+                    description: 'Search query'
+                  type:
+                    type: 'STRING'
+                    description: 'Type of place'
+                    enum: ['restaurant', 'hotel', 'attraction']
+                required: ['query']
+
 tests:
   - description: Test with major city
     vars:
