--- a/examples/google-aistudio-gemini/promptfooconfig.yaml
+++ b/examples/google-aistudio-gemini/promptfooconfig.yaml
@@ -7,6 +7,22 @@ prompts:
     Please solve this step by step, showing your reasoning process.
 
 providers:
+  - id: google:gemini-2.5-flash-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0.7
+        maxOutputTokens: 2048
+        thinkingConfig:
+          thinkingBudget: 1024 # Enhanced reasoning and thinking capabilities
+
+  - id: google:gemini-2.5-flash-lite-preview-09-2025
+    config:
+      generationConfig:
+        temperature: 0.7
+        maxOutputTokens: 2048
+        thinkingConfig:
+          thinkingBudget: 1024 # Enhanced reasoning and thinking capabilities
+
   - id: google:gemini-2.5-pro
     config:
       generationConfig:
@@ -30,10 +46,6 @@ providers:
         maxOutputTokens: 1024
         thinkingConfig:
           thinkingBudget: 512 # Most cost-efficient and fastest 2.5 model
-
-  - google:gemini-2.0-flash-exp
-
-  - google:gemini-2.0-flash-thinking-exp
 
   - id: google:gemini-2.5-pro
     config:
