fix: move xlsx from dependencies to peerDependencies as intended
This addresses the critical issue where xlsx was incorrectly placed in
dependencies instead of peerDependencies, making it a required dependency
rather than optional. Now xlsx is truly optional:

- Users without xlsx: get helpful error message
- Users with xlsx: seamless Excel file support
- Reduces bundle size for users who don't need Excel support

Testing confirmed:
- Error handling works when xlsx not installed
- Parsing works correctly when xlsx is installed
- All tests pass

--- a/package.json
+++ b/package.json
@@ -118,8 +118,7 @@
     "playwright": "^1.55.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "sharp": "^0.34.4",
-    "xlsx": "^0.20.0"
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@adaline/anthropic": "1.7.1",
@@ -273,6 +272,7 @@
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "ws": "^8.18.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76",
     "zod-validation-error": "^3.5.3"
   },
