--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "drizzle-orm": "^0.44.5",
     "express": "^5.1.0",
     "fast-deep-equal": "^3.1.3",
+    "fast-safe-stringify": "^2.1.1",
     "fast-xml-parser": "^5.2.5",
     "fastest-levenshtein": "^1.0.16",
     "glob": "^11.0.3",
