--- a/site/package.json
+++ b/site/package.json
@@ -39,6 +39,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "prism-react-renderer": "^2.4.1",
+    "puppeteer": "^24.22.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.34.4",
