--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,13 +18,6 @@
   "ts-node": {
     "swc": true
   },
-  "include": [
-    "src/",
-    "test/",
-    "./package.json",
-    "src/**/*.json",
-    "test/**/*.json",
-    "src/types/globals.d.ts"
-  ],
+  "include": ["src/", "test/", "./package.json", "src/**/*.json", "test/**/*.json"],
   "exclude": ["node_modules", "dist", "src/workers/**/*", "src/app/**/*", "test/site/"]
 }
