--- a/site/package.json
+++ b/site/package.json
@@ -17,16 +17,15 @@
   },
   "devDependencies": {
     "@calcom/embed-react": "^1.5.3",
-    "@docusaurus/core": "^3.8.1",
-    "@docusaurus/module-type-aliases": "^3.8.1",
-    "@docusaurus/plugin-client-redirects": "^3.8.1",
-    "@docusaurus/plugin-content-docs": "^3.8.1",
-    "@docusaurus/preset-classic": "^3.8.1",
-    "@docusaurus/theme-mermaid": "^3.8.1",
+    "@docusaurus/core": "^3.9.1",
+    "@docusaurus/module-type-aliases": "^3.9.1",
+    "@docusaurus/plugin-client-redirects": "^3.9.1",
+    "@docusaurus/plugin-content-docs": "^3.9.1",
+    "@docusaurus/preset-classic": "^3.9.1",
+    "@docusaurus/theme-mermaid": "^3.9.1",
     "@mdx-js/react": "^3.1.1",
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^7.3.2",
-    "@resvg/resvg-js": "^2.6.2",
     "@segment/ajv-human-errors": "^2.15.0",
     "@swc/core": "^1.13.5",
     "@swc/jest": "^0.2.39",
@@ -39,9 +38,9 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.544.0",
     "prism-react-renderer": "^2.4.1",
-    "puppeteer": "^24.22.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "satori": "^0.18.3",
     "sharp": "^0.34.4",
     "typescript": "^5.9.2"
   },
