--- a/examples/slack-human-feedback/promptfooconfig.yaml
+++ b/examples/slack-human-feedback/promptfooconfig.yaml
@@ -8,7 +8,7 @@ description: Human feedback via Slack
 
 providers:
   # AI model for comparison
-  - openai:gpt-4o-mini
+  - openai:gpt-5-nano
 
   # Human feedback via Slack
   - slack:C_YOUR_CHANNEL_ID # Replace with your channel ID
