--- a/src/app/package.json
+++ b/src/app/package.json
@@ -63,6 +63,8 @@
     "zustand": "^5.0.8"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "react-hook-form": "^7.64.0",
     "redent": "^4.0.0",
     "reselect": "^5.1.1",
     "set-cookie-parser": "^2.7.1"
