--- a/biome.json
+++ b/biome.json
@@ -102,7 +102,7 @@
         "noUnusedVariables": "error",
         "noUnusedImports": "error",
         "useExhaustiveDependencies": "off",
-        "noUnusedFunctionParameters": "off",
+        "noUnusedFunctionParameters": "error",
         "useJsxKeyInIterable": "error"
       },
       "style": {
