--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,5 +131,8 @@
     "source.organizeImports.biome": "explicit",
     "source.fixAll.biome": "explicit"
 
+  },
+  "[python]": {
+    "editor.defaultFormatter": "charliermarsh.ruff"
   }
 }
